<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="232dp"
        android:layout_height="80dp"
        android:visibility="visible"
        app:srcCompat="@drawable/triangulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangulo1"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider4"
        android:layout_width="348dp"
        android:layout_height="4dp"
        android:layout_marginBottom="92dp"
        android:background="@color/purple_200"
        android:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.562"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:background="@drawable/style_bordes"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:background="@drawable/style_bordes"
        android:foregroundTint="#F6F5F5"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Const1"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Const2"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="205dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="248dp"
        android:text="@string/Const5"
        android:textColor="#0B0A0A"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PW"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="UnknownId,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/BtnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E1F3F1"
        android:onClick="funcionParaBttnI"
        android:text="@string/Const4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:iconTint="#BA2121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/BtnIngresar"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="516dp"
        android:backgroundTint="#111212"
        android:onClick="funcionParaBttn1"
        android:text="Ingresar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/resgistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="298dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="144dp"
        android:text="@string/Const6"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="254dp"
        android:layout_height="37dp"
        android:layout_marginTop="96dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Const7"
        android:textColor="#290404"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="120dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/logo_empresa" />
</androidx.constraintlayout.widget.ConstraintLayout>