<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity8">

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/facebook" />

    <Button
        android:id="@+id/btnCerrar3"
        android:layout_width="122dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#817070"
        android:onClick="funcionCerrarSesion"
        android:text="Cerrar Sesion"
        android:textColor="#DFDBD6"
        android:textSize="10sp"
        app:iconTint="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/resgistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        tools:ignore="UnknownId" />

    <View
        android:id="@+id/divider10"
        android:layout_width="348dp"
        android:layout_height="4dp"
        android:layout_marginBottom="660dp"
        android:background="@color/purple_200"
        android:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="149dp"
        android:layout_height="67dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangulo1" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="191dp"
        android:layout_height="24dp"
        android:text="@string/Const15"
        android:textAlignment="viewStart"
        android:textColor="#08514B"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="28dp"
        android:layout_height="23dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_video_online" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="334dp"
        android:layout_height="36dp"
        android:text="@string/Const14"
        android:textColor="#121111"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638"
        tools:visibility="visible" />

    <Button
        android:id="@+id/BuscarEmpleoo"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#736B6B"
        android:onClick="funcionParaBttnI"
        android:text="Buscar Empleo"
        android:textColor="#FAF7F7"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/divider11"
        android:layout_width="312dp"
        android:layout_height="4dp"
        android:background="@color/purple_200"
        android:backgroundTint="#5A5858"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <Button
        android:id="@+id/abrirF"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="Open"
        android:textColor="#272424"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/abrirT"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="Open"
        android:textColor="#272424"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/abrirI"
        android:layout_width="63dp"
        android:layout_height="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="Open"
        android:textColor="#272424"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/twiter"
        android:layout_width="53dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="71dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="28dp"
        android:layout_height="23dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <Button
        android:id="@+id/button6"
        android:layout_width="101dp"
        android:layout_height="34dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#736B6B"
        android:text="Contactos"
        android:textColor="#FAF7F7"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="191dp"
        android:layout_height="24dp"
        android:text="@string/Const16"
        android:textAlignment="viewStart"
        android:textColor="#08514B"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="335dp"
        android:layout_height="59dp"
        android:text="@string/Const13"
        android:textColor="#121111"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="93dp"
        android:layout_height="107dp"
        android:background="@drawable/style_bordes1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/foto" />

    <Button
        android:id="@+id/Postulacion"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="#736B6B"
        android:text="Mis postulaciones"
        android:textColor="#FAF7F7"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="30dp"
        android:layout_height="22dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="181dp"
        android:layout_height="23dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Const7"
        android:textColor="#290404"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MI PERFIL"
        android:textColor="#170909"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/logo_empresa" />

    <Button
        android:id="@+id/Contacto"
        android:layout_width="101dp"
        android:layout_height="34dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#736B6B"
        android:text="Contactos"
        android:textColor="#FAF7F7"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="347dp"
        android:layout_height="121dp"
        android:text="@string/Const12"
        android:textAlignment="viewStart"
        android:textColor="#0E0E0E"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <View
        android:id="@+id/divider12"
        android:layout_width="309dp"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:backgroundTint="#5A5858"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

</androidx.constraintlayout.widget.ConstraintLayout>